# AssetManager

./: .env.example  .gitignore  README.md  check_db.py  ejempl-plan.md  kill_backend.ps1  marco-teorico.md  project_roadmap.md  run_app.bat  run_app.ps1  test_bootstrap_crash.py  test_config.json  test_intraday.py  test_sessions.py  test_signals.py  test_yf.py
backend/: DEV_INSTRUCTIONS.md  apps.json  requirements.txt  test_report.py  test_wma_rust.py  test_yahoo.py  widgets.json
backend/.cache/: cache.db-shm  cache.db-wal
backend/.rate_limit_cache/: cache.db-shm  cache.db-wal
backend/app/: main.py
backend/app/agents/: general.py  orchestrator.py
backend/app/agents/strategies/: 1.orb_fvg_engulfing_m5_m1.md  backtest_runner.py  config_orb_fvg.json  report_generator.py
backend/app/agents/team/: base.py  orchestrator.py  specialists.py  state.py
backend/app/analytics/models/: hmm.py
backend/app/api/routes/: agents.py  analytics.py  auth.py  clients.py  market_data.py  openbb_config.py  portfolios.py  simulation.py  trading.py  watchlist.py
backend/app/application/use_cases/: __init__.py  get_historical.py  get_quote.py
backend/app/core/: config.py  container.py  database.py  logging.py  rate_limiter.py
backend/app/domain/: __init__.py
backend/app/domain/entities/: __init__.py  market.py  portfolio.py
backend/app/domain/interfaces/: __init__.py  data_repository.py  llm_provider.py  market_provider.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/ai/: __init__.py  deepseek_provider.py  glm5_provider.py  mistral_provider.py  mixtral_provider.py  nemotron_provider.py  prompts.py
backend/app/infrastructure/persistence/: __init__.py  duckdb_repository.py
backend/app/infrastructure/providers/: __init__.py  alpha_vantage_provider.py  fmp_provider.py  polygon_provider.py  twelvedata_provider.py  yahoo_provider.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: alpha_vantage_service.py  auth.py  duckdb_store.py  fee_service.py  fmp_service.py  intraday_repository.py  market_data.py  nvidia_service.py  openbb_service.py  polygon_service.py  risk_service.py  simulation_service.py  twelve_data_service.py  yahoo_finance_service.py
backend/data/: market.duckdb
backend/tests/: test_bootstrap.py  test_market_data.py  test_orb_strategy.py
core_engine/: CMakeLists.txt
core_engine/fix/: schema.xml
core_engine/include/: fix_handler.h  market_feed.h  order_matching.h
core_engine/src/: bindings.cpp  fix_handler.cpp  market_feed.cpp  order_matching.cpp
docs/: ISSUES_LOG.md  hmm_market_regime.md
frontend/: package-lock.json  package.json
frontend/electron/: main.js  preload.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/ai/: ChatWidget.tsx
frontend/src/components/charts/: AllocationDonut.tsx  (+2 more)
frontend/src/context/: PortfolioContext.tsx
frontend/src/hooks/: useSocket.ts
(+20 files in other folders)
